@@ -10,10 +10,16 @@ CATEGORIES_CATEGORY_ADD_TITLE=Category Manager: Add New Category
 CATEGORIES_CATEGORY_EDIT_TITLE=Category Manager: Edit Category
 
 CATEGORIES_FIELDSET_DETAILS=Details
-CATEGORIES_FIELDSET_METADATA=Metadata
+CATEGORIES_FIELDSET_METADATA=Metadata Options
 CATEGORIES_FIELDSET_OPTIONS=Options
 
 CATEGORIES_FIELDSET_RULES=Category Access Rules
+
+CATEGORIES_FIELDSET_BLOG_LAYOUTS=Blog Layout Options
+CATEGORIES_FIELDSET_LIST_LAYOUTS=List Layout Options
+CATEGORIES_FIELDSET_CATFEAT_LAYOUTS=Categories & Featured Layout Options
+CATEGORIES_FIELDSET_INTEGRATION=Integration Options
+
 
 
 CATEGORIES_DESCRIPTION_DESC=Description Desc
