@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Nov-2009 Ron Severdia
+^ Added panels on Edit Category screen, new panels added for default params
+
 22-Nov-2009 Ron Severdia
 ^ CSS button styling, icon update
 # Language fixes
